# Gaussian-Mixture-Model

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: installArtifacts.yml  runTests.yml
Lib/: CMakeLists.txt
Lib/header/: Error.h  ExpectationMaximization.h  GMM.h  GaussianMixtureModel.h  GaussianMixtureModelFactory.h  GaussianMixtureModelSampler.h  KMeans.h  TrainSet.h
Lib/header/GaussianMixtureModel/: GaussianMixtureModel.h  GaussianMixtureModelFactory.h  GaussianMixtureModelSampler.h  TrainSet.h
Lib/source/: Commons.cpp  Commons.h  EvaluateLogDensity.h  ExpectationMaximization.cpp  ExpectationMaximization.h  GMM.cpp  GMMDivergence.cpp  GMMExpectationMaximization.cpp  GMMSampler.cpp  GaussianMixtureModel.cpp  GaussianMixtureModelFactory.cpp  GaussianMixtureModelSampler.cpp  KMeans.cpp  TrainSet.cpp
Lib_old/source/: GMMDivergence.cpp  GMMSampler.cpp
Samples/: 01-Kmeans.cpp  02-GMM-2d.cpp  03-GMM-3d.cpp  04-GMM-divergence.cpp  CMakeLists.txt  Sample01.cpp  Sample02.cpp  Sample03.cpp  Sample04.cpp  Utils.h  Visualize02.py  Visualize04.py
content/GMM/: GMM.cpp  GMM.h  Utilities.h
content/Sample_01/: Main.m  Sample_01.cpp  Visualize.py  print_with_colors.m
content/Sample_02/: Main.m  Sample_02.cpp  Visualize.py  import_GMM.m  plot_GMM.m  print_with_colors2.m
content/Sample_04/: Sample_04.cpp
doc/: Gaussian_Mixture_Model.tex  doc_gen.bat
doc/image/: Main_Figure.m  f_approx.eps  normal_01.eps  normal_01.fig  normal_02.eps  normal_02.fig  normal_03.eps  normal_03.fig  normal_04.eps  normal_04.fig  normal_05.fig  normal_05.pdf_tex
samples/: 00-Readme.cpp  01-Kmeans.cpp  02-GMM-2d.cpp  03-GMM-3d.cpp  04-GMM-divergence.cpp  CMakeLists.txt  Utils.h  Visualize02.py  Visualize03.py
src/: CMakeLists.txt
src/header/GaussianMixtureModel/: ExpectationMaximization.h  GaussianMixtureModel.h  GaussianMixtureModelFactory.h  GaussianMixtureModelSampler.h  KMeans.h  TrainSet.h
src/source/: EvaluateLogDensity .cpp  ExpectationMaximization.cpp  GaussianMixtureModel.cpp  GaussianMixtureModelFactory.cpp  GaussianMixtureModelSampler.cpp  KMeans.cpp  TrainSet.cpp
tests/: CMakeLists.txt  Test01-DistributionCreation.cpp  Test02-kMeans.cpp  Test03-EMAndSampling.cpp  Test03-Sampling.cpp
tests/src/: CMakeLists.txt
tests/src/header/: Packer.h
tests/src/src/: Packer.cpp
